--- a/src/Login.css
+++ b/src/Login.css
@@ -13,12 +13,20 @@ body {
 }
 
 .login-box {
-  width: 100%;
-  max-width: 600px;
+  width: 270%; /* Adjust to your preference */
+  max-width: 1000px; /* Adjust the max-width as needed */
   margin: 0 auto;
   padding: 20px;
   border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  align-items: center;
+}
+
+.login-box .main-logo {
+  display: block;
+  margin: 0 auto px; /* Increase margin to create space below the main image */
+  max-width: 300%; /* Ensure the main image takes up the available width */
+  height: auto;
 }
 
 .login-box h2 {
@@ -38,13 +46,6 @@ body {
   height: auto;
 }
 
-.login-box .main-logo {
-  display: block;
-  margin: 0 auto 20px;
-  max-width: 80%;
-  height: auto;
-}
-
 .login-box .ui.form .field {
   margin-bottom: 15px;
 }
@@ -58,14 +59,14 @@ body {
 }
 
 .login-box .ui.button {
-  width: auto; /* Adjust width as needed */
+  width: auto;
   background-color: #3AB654;
   color: white;
-  border: 1 px;
-  padding: 6px 10px; 
+  border: 1px solid transparent;
+  padding: 6px 10px;
   border-radius: 4px;
   transition: background-color 0.3s ease;
-  font-size: 20px; /* Adjust font size */
+  font-size: 20px;
 }
 
 .login-box .ui.button:hover {
