--- a/src/Pages/AdminLogin.css
+++ b/src/Pages/AdminLogin.css
@@ -1,30 +1,26 @@
-/* AdminLogin.css */
-
-.admin-container {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  justify-content: flex-start;
-}
-
+/* Sidebar styles */
 .sidebar {
-  background-color: #294179;
+  background-color: white; /* Changed background to white */
   padding: 15px;
+  width: 200px;
+  position: absolute;
+  align-self: flex-start;
+  box-shadow: 0 0 10px #7282A7; /* Added shadow border */
 }
 
 .taskbar {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   list-style: none;
   padding: 0;
 }
 
 .taskbar li {
-  margin-right: 20px;
+  margin-bottom: 10px;
 }
 
 .taskbar a {
-  color: #ffffff;
+  color: #00a65a; /* Set font color to #00a65a */
   text-decoration: none;
   font-size: 20px;
   padding: 10px;
@@ -35,7 +31,35 @@
   background-color: #00a65a;
 }
 
+/* Content area */
 .content {
   flex: 1;
   padding: 20px;
+}
+
+/* Taskbar button styles */
+.taskbar button {
+  background-color: transparent;
+  color: #00a65a; /* Set font color to #00a65a */
+  font-size: 18px;
+  font-weight: bold;
+  border: none;
+  cursor: pointer;
+  padding: 8px 16px;
+  transition: background-color 0.3s ease;
+}
+
+.taskbar button:hover {
+  background-color: #E8ECF7;
+}
+
+.bottom-bar {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 15px; /* Adjust the height as needed */
+  background-color: #294179;
+  background-image: linear-gradient(to right, #294179, #3AB654); /* Solid color 2 */
+
 }
