--- a/src/Register.css
+++ b/src/Register.css
@@ -1,5 +1,3 @@
-/* Register.css */
-
 body {
   margin: 0;
   padding: 0;
@@ -10,25 +8,29 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
+  width: 100vw;
 }
 
 .register-container {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
   align-items: center;
+  justify-content: center; 
   height: 100vh;
   color: #7282A7;
-  width: 100%;
+  width: 100%; 
+  max-width: 1920px; 
+  box-sizing: border-box;
+  width: 100vw;
 }
 
 .register-box {
   width: 100%;
   max-width: 450px;
+  text-align: center; 
 }
 
 .register-box h2 {
-  text-align: center;
   margin-bottom: 20px;
   color: #3AB654;
 }
@@ -38,38 +40,28 @@ body {
 }
 
 .register-box input {
-  width: calc(100% - 10px);
-  padding: 6px 10px;
+  width: calc(100% - 2px); 
+  padding: 12px;
   margin-bottom: 10px;
   border-radius: 3px;
-  border: 1px solid #B7E4C1;
+  border: 2px solid #B7E4C1;
 }
 
 .main-logo {
-  max-width: 400px; /* Adjust the max-width as needed */
+  max-width: 100%; 
+  width: 100%; 
   margin-bottom: 20px;
-  size-adjust: 1000px;
-  /* Add more styles to your image if required */
-}
-
-.register-box {
-  text-align: center;
-}
-
-.register-box h2 {
-  margin-bottom: 20px;
-  color: #3AB654;
 }
 
 .register-box .ui.button {
-  width: auto; /* Adjust width as needed */
+  width: auto;
   background-color: #3AB654;
   color: white;
   border: 1px solid transparent;
   padding: 6px 10px;
   border-radius: 4px;
   transition: background-color 0.3s ease;
-  font-size: 20px; /* Adjust font size */
+  font-size: 20px; 
 }
 
 .register-box .ui.button:hover {
